# OpenChain.io

./: .gitignore  FRONTEND_LAYERZERO_UPDATE.md  ISSUES-FIXED-REPORT.md  LICENSE  PRODUCTION-READINESS-REPORT.md  README.md  biome.json  deploy-all.sh  env-template.txt  mvp-test-report.json  next.config.js  package-lock.json  package.json  solana-dependency-issue.md  tailwind.config.ts  test-mvp.js  tsconfig.json
CrossChain/: Chainlink.md  LayerZero.md
contracts/evm/: .solhint.json  LAYERZERO_DEPLOYMENT_GUIDE.md  README.md  SOLUTION.md  hardhat.config.js  hardhat.config.ts  hardhat.direct.config.js  package-lock.json  package.json  tsconfig.json  verify-deployment.js
contracts/evm/.openzeppelin/: sepolia.json
contracts/evm/contracts/: ChainlinkPriceFeed.sol  ChainlinkSecurity.sol  LayerZeroLending.sol  LendingPool.sol  LiquidationManager.sol  Permissions.sol  RateLimiter.sol  SyntheticAsset.sol  TimeLock.sol
contracts/evm/deployments/: hardhat-1751001696271.json  layerzero-sepolia-1751639137805.json  layerzero-sepolia-1751645114226.json  layerzero-simple-sepolia-1751578069645.json  sepolia-1751033850350.json  sepolia-fixed-1751039569637.json
contracts/evm/scripts/: add-eth-asset-standalone.js  add-eth-layerzero.js  check-balance.js  check-layerzero-assets.js  check-supported-assets.js  check-transaction.js  configure-price-feeds.js  debug-failed-transaction.js  debug-price-feed-stale.js  deploy-direct.js  deploy-fixed.js  deploy-layerzero.js  deploy-mvp.js  deploy-simple.js  deploy-testnet.js  deploy-testnet.ts  deploy.js  diagnose-contracts.js  fix-frontend-transaction.js  fix-price-feed-stale.js  initialize-contracts.js  manual-fix-price-feed.js  monitor-transaction.js  redeploy-lending-pool.js  simple-initialize.js  test-fixed-deployment.js  test-layerzero-deposit.js  test-layerzero-integration.js  update-eth-price-feed.js  update-frontend.js  verify-dependencies.js  verify-deposit.js
contracts/evm/test/: ContractInterfaceAnalysis.test.js  ProductionVerification.test.js
contracts/solana/: .gitignore  Anchor.toml  BUILD_GUIDE.md  Cargo.toml  LINT_FIXES_SUMMARY.md  build-and-fix.sh  package.json  tsconfig.json
contracts/solana/migrations/: deploy.ts
contracts/solana/programs/lending_pool/: Cargo.toml
contracts/solana/programs/lending_pool/src/: lib.rs
contracts/solana/tests/: lending_pool.ts
contracts/solana/types/: lending_pool.d.ts
src/app/: ClientBody.tsx  globals.css  layout.tsx  page.tsx
src/app/api/borrow/: route.ts
src/app/api/token-prices/: route.ts
src/app/crosschain/: page.tsx
src/app/docs/: page.tsx
src/app/news/: page.tsx
src/app/positions/: page.tsx
src/app/transactions/: page.tsx
src/components/: AppShell.tsx  BorrowModal.tsx  ClientOnly.tsx  Dashboard.tsx  DepositModal.tsx  LeftSidebar.tsx  MobileHeader.tsx  MultiChainWallet.tsx  Positions.tsx  SolanaWalletProvider.tsx  SolanaWalletProviderInternal.tsx  TransactionModal.tsx  WalletButton.tsx  WalletConnector.tsx
src/components/crosschain/: BorrowingProtocol.tsx  LendingProtocol.tsx  YourAssets.tsx
src/hooks/: useChainlinkSecurity.ts  useLayerZero.ts  useTransactions.ts  useUserPosition.ts
src/lib/: chains.ts  contracts.ts  utils.ts  wagmi.ts  wagmi.ts.backup
src/types/: index.ts
