[workspace]
members = [
    "programs/*"
]
resolver = "2"

[patch.crates-io]
# Remove patch as we are downgrading dependencies
# solana-program = { git = "https://github.com/solana-labs/solana.git", rev = "v1.18.18" }

[workspace.dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
borsh = "0.10.3"
thiserror = "1.0.50"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
