[workspace]
members = [
    "programs/*"
]
resolver = "2"

[patch.crates-io]
# Removed problematic patch

[workspace.dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "1.18.22"
spl-token = "4.0.0"
spl-associated-token-account = "2.3.0"
borsh = "0.10.3"
thiserror = "1.0.50"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
